# igarss-fmars

./: .gitignore  README.md  data  pyproject.toml  req.txt  requirements.txt
configs/_base_/: default_runtime.py
configs/_base_/datasets/: maxar.py  maxar_ij.py  maxar_notrees.py  maxar_sampler.py  maxar_val.py  uda_maxar_to_maxar.py  uda_maxar_to_maxar_entropy.py  uda_maxar_to_maxar_inference.py  uda_maxar_to_maxar_notrees.py  uda_maxar_to_maxar_val.py
configs/_base_/models/: daformer_conv1_mitb3.py  daformer_conv1_mitb5.py  daformer_sepaspp_mitb3.py  segformer.py  segformer_b0.py  segformer_b3.py  segformer_b5.py  segformer_r101.py
configs/_base_/uda/: dacs.py
configs/fmars/: b0.py  b5.py  b_ij.py  b_samp.py  daformer.py  daformer_base.py  daformer_entropy.py  daformer_inference.py  daformer_sampler.py  daformer_val.py  mic.py  mic_inference.py  mic_sampler.py  mic_val.py  segformer.py  segformer_inference.py  segformer_val.py
configs/maxar/: b0.py  b5.py  daformer.py  mic.py  train_first_attempt.py
configs/overwatch/: daformer.py  daformer_linear.py  daformer_trh.py  segformer.py  segformer_e-5.py  segformer_linear.py
jobs/: utils
metadata/: .gitignore  index_map.json
mmseg/: __init__.py
mmseg/apis/: inference.py  test.py  train.py
mmseg/core/evaluation/: metrics.py
mmseg/datasets/: __init__.py  builder.py  custom.py  tif_dataset.py  uda_dataset.py
mmseg/datasets/pipelines/: __init__.py  loading.py  transforms.py
mmseg/models/losses/: cross_entropy_loss.py
mmseg/models/segmentors/: encoder_decoder.py
mmseg/models/uda/: advseg.py  dacs.py  fcdiscriminator.py  masking_consistency_module.py  minent.py  teacher_module.py
mmseg/models/utils/: visualization.py
mmseg/samplers/: maxar_conditioned.py  maxar_entropy.py  uda_entropy_ij.py
mmseg/utils/: utils.py
notebooks/: fmars_metrics.ipynb  validation_metrics.ipynb
tools/: test.py  train.py
